Provision example logging
